--- a/index.html
+++ b/index.html
@@ -8,3 +8,14 @@ Include a table showing the specifications of some top selling products of your 
         - amount (number of items represented as an integer), and
         - image location (an image using a URI pointing to a representative image of the product on the web),
 -->
+
+<!DOCTYPE html>
+<html lang="en">
+  <title>Home - Shop</title>  
+  <meta charset='utf-8'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <body>
+    
+  </body>
+</html>
