--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@ Include a table showing the specifications of some top selling products of your 
 
 <!DOCTYPE html>
 <html lang="en">
-  <title>Home - Shop</title>  
-  <meta charset='utf-8'>
+  <title>Home - Jumbo 2.0</title>
+
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
+  <link rel="stylesheet" href="style.css">
+
   <body>
-    
+    <h1>Write Something</h1>
   </body>
 </html>
