--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ Include a table showing the specifications of some top selling products of your 
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <body>
-    
+    <h2>dupa test</h2>
   </body>
 </html>
