--- a/index.html
+++ b/index.html
@@ -11,14 +11,20 @@ Include a table showing the specifications of some top selling products of your 
 
 <!DOCTYPE html>
 <html lang="en">
-  <title>Home - Jumbo 2.0</title>
+  <head>
+    <title>Home - Bedrunka</title>
 
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+  </head>
 
   <body>
-    <h1>Write Something</h1>
+    <h1>Bedrunka</h1>
+    <h2>Be yourself. Bedrunka.</h2>
+    <nav></nav>
+
+    <section></section>
   </body>
 </html>
