--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Include a table showing the specifications of some top selling products of your 
     <!-- Table -->
     
     <footer>
-      <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
+      <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e"> <!--i think this shouldnt be in footer should it?-->
         
       </form>
     </footer>
