--- a/index.html
+++ b/index.html
@@ -21,18 +21,53 @@ Include a table showing the specifications of some top selling products of your 
   </head>
 
   <body>
-    <h2>dupa test</h2>
-    <h1>Write Something</h1>
     <h1>Bedrunka</h1>
     <h2>Be yourself. Bedrunka.</h2>
     <nav></nav>
 
     <section></section>
 
-    <!-- Table -->
+    <!-- Table (WE NEED ANOTHER TABLE) -->
+    <h2>Featured Products</h2>
+    <table>
+      <tr>
+        <th>product</th>
+        <th>origin</th>
+        <th>best_before_date</th>
+        <th>amount</th>
+        <th>image location</th>
+      </tr>
+      <tr>
+        <td>Noodles</td>
+        <td>Vietnam</td>
+        <td>June 2022</td>
+        <td>23</td>
+        <td>
+          <img src='https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png'>
+        </td>
+      </tr>
+      <tr>
+        <td>Noodles</td>
+        <td>Vietnam</td>
+        <td>Jun 22 2022</td>
+        <td>23</td>
+        <td>
+          <img src='https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png'>
+        </td>
+      </tr>
+      <tr>
+        <td>Noodles</td>
+        <td>Vietnam</td>
+        <td>Jun 22 2022</td>
+        <td>23</td>
+        <td>
+          <img src='https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png'>
+        </td>
+      </tr>
+    </table>
     
     <footer>
-      <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e"> <!--i think this shouldnt be in footer should it?-->
+      <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e"> <!--i think this shouldnt be in footer should it? No.-->
         
       </form>
     </footer>
