--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Include a table showing the specifications of some top selling products of your 
         <tr>
           <td>Noodles</td>
           <td>Vietnam</td>
-          <td>June 2022</td>
+          <td>22 June 2022</td>
           <td>23</td>
           <td>
             <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png">
@@ -50,7 +50,7 @@ Include a table showing the specifications of some top selling products of your 
         <tr>
           <td>Noodles</td>
           <td>Vietnam</td>
-          <td>Jun 22 2022</td>
+          <td>22 Jun 2022</td>
           <td>23</td>
           <td>
             <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png">
@@ -59,7 +59,7 @@ Include a table showing the specifications of some top selling products of your 
         <tr>
           <td>Noodles</td>
           <td>Vietnam</td>
-          <td>Jun 22 2022</td>
+          <td>22 Jun 2022</td>
           <td>23</td>
           <td>
             <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png">
