--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ Include a table showing the specifications of some top selling products of your 
           <th>image location</th>
         </tr>
         <tr>
-          <td>Noodles</td>
-          <td>Vietnam</td>
-          <td>22 June 2022</td>
-          <td>23</td>
+          <td>ТОВАРИЩ!</td>
+          <td>Russia</td>
+          <td>23 Nov 2023</td>
+          <td>75</td>
           <td>
-            <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png">
+            <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png">
           </td>
         </tr>
         <tr>
