--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ Include a table showing the specifications of some top selling products of your 
           </tr>
           <tr>
             <td colspan="5">
-              <button type="submit">Hello</button>
+              <button type="submit">Add Product</button>
             </td>
           </tr>
         </table>
