--- a/index.html
+++ b/index.html
@@ -76,11 +76,11 @@ Include a table showing the specifications of some top selling products of your 
             </td>
           </tr>
           <tr>
-            <td><input></td>
-            <td><input></td>
+            <td><input type="text"></td>
+            <td><input type="text"></td>
             <td><input type="date"></td>
             <td><input type="number"></td>
-            <td><input></td>
+            <td><input type="url"></td>
           </tr>
           <tr>
             <td colspan="5">
