--- a/index.html
+++ b/index.html
@@ -1,14 +1,3 @@
-<!--
-Include a table showing the specifications of some top selling products of your web shop.
-
-    The table should have exactly five columns, with for each item a column named:
-        - product (the name of the product in a small string),
-        - origin (the country or region of origin, also a small string),
-        - best_before_date (a date, encoded as a string),
-        - amount (number of items represented as an integer), and
-        - image location (an image using a URI pointing to a representative image of the product on the web),
--->
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -28,10 +17,10 @@ Include a table showing the specifications of some top selling products of your 
       </div>
       <nav>
         <ul class="navbar">
-          <li>Home</li>
-          <li>Products</li>
-          <li>About</li>
-          <li>Contact</li>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
         </ul>
       </nav>
     </header>
