input name and id

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <th>origin</th>
             <th>best_before_date</th>
             <th>amount</th>
-            <th>image location</th>
+            <th>image</th>
           </tr>
           <tr>
             <td>ТОВАРИЩ!</td>
@@ -65,11 +65,11 @@
             </td>
           </tr>
           <tr>
-            <td><input type="text"></td>
-            <td><input type="text"></td>
-            <td><input type="date"></td>
-            <td><input type="number"></td>
-            <td><input type="url"></td>
+            <td><input name='product' id='product' type="text"></td>
+            <td><input name='origin' id='origin' type="text"></td>
+            <td><input name='best_before_date' id='best_before_date' type="date"></td>
+            <td><input name='amount' id='amount' type="number"></td>
+            <td><input name='image' id='image' type="url"></td>
           </tr>
           <tr>
             <td colspan="5">
