--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
         <table>
           <caption>Featured Products</caption>
           <tr>
-            <th>product</th>
-            <th>origin</th>
-            <th>best_before_date</th>
-            <th>amount</th>
-            <th>image</th>
+            <th>Product</th>
+            <th>Origin</th>
+            <th>Best before date</th>
+            <th>Amount</th>
+            <th>Image</th>
           </tr>
           <tr>
             <td>ТОВАРИЩ!</td>
