--- a/index.html
+++ b/index.html
@@ -79,5 +79,13 @@
         </table>
       </form>
     </section>
+
+    <section>
+      <h3>About Us</h3>
+      <figure>
+        <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.forum-betrieb.de%2Fimages%2Fforumbetrieb%2Fbedrunka-hirth_logo_2018.jpg&f=1&nofb=1">
+        <figcaption>Our parent company</figcaption>
+      </figure>
+    </section>
   </body>
 </html>
