added second table

--- a/index.html
+++ b/index.html
@@ -81,6 +81,55 @@
     </section>
 
     <section>
+      <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
+        <table>
+          <caption>Employees of the Year</caption>
+          <tr>
+            <th>Name</th>
+            <th>Month</th>
+            <th>Streak</th>
+            <th>Image</th>
+          </tr>
+          <tr>
+            <td>Andrzej</td>
+            <td>December, 2020</td>
+            <td>3</td>
+            <td>
+              <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png">
+            </td>
+          </tr>
+          <tr>
+            <td>Alex</td>
+            <td>January, 2021</td>
+            <td>1</td>
+            <td>
+              <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png">
+            </td>
+          </tr>
+          <tr>
+            <td>Eduart</td>
+            <td>September, 2020</td>
+            <td>2</td>
+            <td>
+              <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png">
+            </td>
+          </tr>
+          <tr>
+            <td><input name='name' id='name' type="text"></td>
+            <td><input name='month' id='month' type="date"></td>
+            <td><input name='streak' id='streak' type="number"></td>
+            <td><input name='amount' id='amount' type="number"></td>
+          </tr>
+          <tr>
+            <td colspan="4">
+              <button type="submit">Add Employee</button>
+            </td>
+          </tr>
+        </table>
+      </form>
+    </section>
+
+    <section>
       <h3>About Us</h3>
       <p>
         Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks. But did you know Bedrunka also sells recipes? Here's how you make Noodles:
