--- a/index.html
+++ b/index.html
@@ -16,13 +16,14 @@
         <h2>Be yourself. <strong>Bedrunka.</strong></h2>
       </div>
       <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
+        <ul class="navbar">
+          <li><a href="https://alexlushiku.com">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
       </nav>
+      <div id="header"></div>
     </header>
 
     <!-- Table (WE NEED ANOTHER TABLE) -->
