--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </div>
       <nav>
         <ul class="navbar">
-          <li><a href="https://alexlushiku.com">Home</a></li>
+          <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
