--- a/index.html
+++ b/index.html
@@ -135,20 +135,17 @@
       <p>
         Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks. But did you know Bedrunka also sells recipes? Here's how you make Noodles:
       </p>
-      <pre>
-        <h5>Ingredients</h5>
-        <dl>
-          <li><abbr>Soba</abbr> Noodles</li>
-        </dl>
-      </pre>
-      <pre>
-        <ol>
-          <li>Put hot water in Noodles</li>
-          <li>Pour out water</li>
-          <li>Mix with ingredients</li>
-          <li>Done!</li>
-        </ol>
-      </pre>
+      <dl>
+        <dt>Ingredients</dt>
+        <dd>Soba Noodles</dd>
+      </dl>
+      <h4>Steps</h4>
+      <ol>
+        <li>Put hot water in Noodles</li>
+        <li>Pour out water</li>
+        <li>Mix with ingredients</li>
+        <li>Done!</li>
+      </ol>
       <figure>
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.forum-betrieb.de%2Fimages%2Fforumbetrieb%2Fbedrunka-hirth_logo_2018.jpg&f=1&nofb=1">
         <figcaption>Our parent company</figcaption>
