--- a/index.html
+++ b/index.html
@@ -132,12 +132,14 @@
 
     <section>
       <h3>About Us</h3>
-      <p>
-        Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks. But did you know Bedrunka also sells recipes? Here's how you make Noodles:
-      </p>
+      <pre>
+        <p>Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks.</p> 
+        <p>But did you know Bedrunka also sells recipes?</p> 
+        <p>Here's how you make Noodles:</p>
+      </pre>
       <dl>
         <dt>Ingredients</dt>
-        <dd>Soba Noodles</dd>
+        <dd>Soba Noodles (<abbr>NDLS</abbr>)</dd>
       </dl>
       <h4>Steps</h4>
       <ol>
