--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h2>Be yourself. <strong>Bedrunka.</strong></h2>
       </div>
       <nav>
-        <ul class="navbar">
+        <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#featured">Featured</a></li>
           <li><a href="#employees">Employees</a></li>
@@ -153,6 +153,7 @@
         <img src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fwww.forum-betrieb.de%2Fimages%2Fforumbetrieb%2Fbedrunka-hirth_logo_2018.jpg&f=1&nofb=1">
         <figcaption>Our parent company</figcaption>
       </figure>
+      <p>Copyright &copy; Bedrunka, LLC</p>
     </footer>
   </body>
 </html>
