--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
             </td>
           </tr>
           <tr>
-            <td><input name='product' id='product' type="text"></td>
-            <td><input name='origin' id='origin' type="text"></td>
-            <td><input name='best_before_date' id='best_before_date' type="date"></td>
-            <td><input name='amount' id='amount' type="number"></td>
-            <td><input name='image' id='image' type="url"></td>
+            <td><input name="product" id="product" type="text"></td>
+            <td><input name="origin" id="origin" type="text"></td>
+            <td><input name="best_before_date" id="best_before_date" type="date"></td>
+            <td><input name="amount" id="amount" type="number" min="0"></td>
+            <td><input name="image" id="image" type="url"></td>
           </tr>
           <tr>
             <td colspan="5">
@@ -78,7 +78,7 @@
         </table>
       </form>
     </section>
-
+      <!-- INPUT PHOTOS OF EMPLOYEES -->
     <section id="employees">
       <table>
         <caption>Employees of the Year</caption>
@@ -120,23 +120,23 @@
       <pre>
         ____                                    ?~~bL
         z@~ b                                    |  `U,
-       ]@[  |                                   ]'  z@'
-       d@~' `|, .__     _----L___----, __, .  _t'   `@j
+       ]@[  |                                   ]"  z@"
+       d@~" `|, .__     _----L___----, __, .  _t"   `@j
       `@L_,   "-~ `--"~-a,           `C.  ~""O_    ._`@
-       q@~'   ]P       ]@[            `Y=,   `H+z_  `a@
-       `@L  _z@        d@               Ya     `-@b,_a'
-        `-@d@a'       )@[               `VL      `a@@'
-          aa~'   ],  .a@'                qqL  ), ./~
-          @@_  _z~  _d@[                 .V@  .L_d'
-           "~@@@'  ]@@@'        __      )@n@bza@-"
+       q@~"   ]P       ]@[            `Y=,   `H+z_  `a@
+       `@L  _z@        d@               Ya     `-@b,_a"
+        `-@d@a"       )@[               `VL      `a@@"
+          aa~"   ],  .a@"                qqL  ), ./~
+          @@_  _z~  _d@[                 .V@  .L_d"
+           "~@@@"  ]@@@"        __      )@n@bza@-"
              `-@zzz@@@L        )@@z     ]@@=%-"
                "~~@@@@@bz_    _a@@@@z___a@K
                    "~-@@@@@@@@@@@@@@@@@@~"   <abbr>jrd</abbr>
-                      `~~~-@~~-@@~~~~~'
+                      `~~~-@~~-@@~~~~~"
       </pre>
       <p>Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks.</p> 
       <p>But did you know Bedrunka also sells recipes?</p> 
-      <p>Here's how you make Noodles:</p>
+      <p>Here"s how you make Noodles:</p>
       <dl>
         <dt>Ingredients</dt>
         <dd>Soba Noodles (<abbr>NDLS</abbr>)</dd>
