--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <td>Potatoes</td>
             <td>Poland</td>
             <td>20 Jan 2021</td>
-            <td>120kg</td>
+            <td>120</td>
             <td>
               <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg">
             </td>
@@ -64,11 +64,11 @@
             </td>
           </tr>
           <tr>
-            <td><input name="product" id="product" type="text"></td>
-            <td><input name="origin" id="origin" type="text"></td>
-            <td><input name="best_before_date" id="best_before_date" type="date"></td>
-            <td><input name="amount" id="amount" type="number" min="0"></td>
-            <td><input name="image" id="image" type="url"></td>
+            <td><input name="product" id="product" type="text" required></td>
+            <td><input name="origin" id="origin" type="text" required></td>
+            <td><input name="best_before_date" id="best_before_date" type="date" required></td>
+            <td><input name="amount" id="amount" type="number" min="0" required></td>
+            <td><input name="image" id="image" type="url" required></td>
           </tr>
           <tr>
             <td colspan="5">
