--- a/index.html
+++ b/index.html
@@ -118,21 +118,29 @@
     <section id="about">
       <h3>About Us</h3>
       <pre>
-        ____                                    ?~~bL
-        z@~ b                                    |  `U,
-       ]@[  |                                   ]"  z@"
-       d@~" `|, .__     _----L___----, __, .  _t"   `@j
-      `@L_,   "-~ `--"~-a,           `C.  ~""O_    ._`@
-       q@~"   ]P       ]@[            `Y=,   `H+z_  `a@
-       `@L  _z@        d@               Ya     `-@b,_a"
-        `-@d@a"       )@[               `VL      `a@@"
-          aa~"   ],  .a@"                qqL  ), ./~
-          @@_  _z~  _d@[                 .V@  .L_d"
-           "~@@@"  ]@@@"        __      )@n@bza@-"
-             `-@zzz@@@L        )@@z     ]@@=%-"
-               "~~@@@@@bz_    _a@@@@z___a@K
-                   "~-@@@@@@@@@@@@@@@@@@~"   <abbr>jrd</abbr>
-                      `~~~-@~~-@@~~~~~"
+                .--------._
+                (`--'       `-.
+                `.______      `.
+              ___________`__     \
+          ,-'           `-.\     |
+          //                \|    |\
+        (`  .'~~~~~---\     \'   | |
+          `-'           )     \   | |
+            ,---------' - -.  `  . '
+          ,'             `%`\`     |
+          /                      \  |
+        /     \-----.         \    `
+        /|  ,_/      '-._            |
+        (-'  /           /            `     <abbr>JBLL</abbr>
+        ,`--<           |        \     \
+        \ |  \         /%%             `\
+        |/   \____---'--`%        \     \
+        |    '           `               \
+        |
+        `--.__
+              `---._______
+                          `.
+                            \
       </pre>
       <p>Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks.</p> 
       <p>But did you know Bedrunka also sells recipes?</p> 
