--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </table>
       </form>
     </section>
-      <!-- INPUT PHOTOS OF EMPLOYEES -->
+      <!-- INPUT PHOTOS OF EMPLOYEES, ADD MOBILE STUFF -->
     <section id="employees">
       <table>
         <caption>Employees of the Year</caption>
