--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
           <li><a href="#about">About</a></li>
         </ul>
       </nav>
-      <div id="hero"></div>
     </header>
+    <div id="hero"></div>
 
     <section id="featured">
       <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
@@ -142,20 +142,22 @@
                           `.
                             \
       </pre>
-      <p>Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks.</p> 
-      <p>But did you know Bedrunka also sells recipes?</p> 
-      <p>Here"s how you make Noodles:</p>
-      <dl>
-        <dt>Ingredients</dt>
-        <dd>Soba Noodles (<abbr>NDLS</abbr>)</dd>
-      </dl>
-      <h4>Steps</h4>
-      <ol>
-        <li>Put hot water in Noodles</li>
-        <li>Pour out water</li>
-        <li>Mix with ingredients</li>
-        <li>Done!</li>
-      </ol>
+      <div>
+        <p>Bedrunka is the <em>biggest</em> international supermarket selling all kinds of food and drinks.</p> 
+        <p>But did you know Bedrunka also sells recipes?</p> 
+        <p>Here"s how you make Noodles:</p>
+        <dl>
+          <dt>Ingredients</dt>
+          <dd>Soba Noodles (<abbr>NDLS</abbr>)</dd>
+        </dl>
+        <h4>Steps</h4>
+        <ol>
+          <li>Put hot water in Noodles</li>
+          <li>Pour out water</li>
+          <li>Mix with ingredients</li>
+          <li>Done!</li>
+        </ol>
+      </div>
     </section>
 
     <footer>
