--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <td>23 Nov 2023</td>
             <td>75</td>
             <td>
-              <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png">
+              <img src="https://static.wixstatic.com/media/391720_66b8aa3a1f694aeaa2911cafd280349c.png" alt="Vodka photo">
             </td>
           </tr>
           <tr>
@@ -51,7 +51,7 @@
             <td>20 Jan 2021</td>
             <td>120</td>
             <td>
-              <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg">
+              <img src="https://assets.bonappetit.com/photos/5d7284758d926f0009df5cfc/5:4/w_3165,h_2532,c_limit/Basically-Gojuchang-Chicken-Potato.jpg" alt="Potatoes photo">
             </td>
           </tr>
           <tr>
@@ -60,7 +60,7 @@
             <td>22 Jun 2022</td>
             <td>23</td>
             <td>
-              <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png">
+              <img src="https://static-images.jumbo.com/product_images/300720202255_159052CUP-1_360x360.png" alt="Noodles photo">
             </td>
           </tr>
           <form method="POST" action="https://wt.ops.labs.vu.nl/api21/e502cf1e">
